# idn-high-stake-probing

./: .gitignore  PROJECT_OVERVIEW.md  README.md  pyproject.toml  setup_lambda.sh
data/indonesian/: synthetic_test_id.jsonl
experiments/: test_neuronpedia_config.py
experiments/cache.bak/: v2b_baseline_results.json  v2b_llama31_8b_failure_analysis_layer12.json  v2b_llama31_8b_probe_layer12.pkl  v2b_llama31_8b_probe_layer16.pkl  v2b_llama31_8b_probe_layer20.pkl  v2b_llama31_8b_probe_layer26.pkl  v2b_llama31_8b_probe_layer31.pkl  v2b_llama31_8b_results.json  v2b_probe_layer16.pkl
experiments/lib/: __init__.py  activations.py  data.py  env.py  evaluation.py  model.py  neuronpedia.py  neuronpedia_config.py  probe.py
experiments/notebooks/: 01_linear_probe_fundamentals.ipynb  02_baseline_reproduction.ipynb  03_baseline_v2_chat_template.ipynb  04_indonesian_translation.ipynb  05_probe_evaluation copy 2.ipynb  05_probe_evaluation copy.ipynb  05_probe_evaluation.html  05_probe_evaluation.ipynb  05_probe_evaluation_gemma.ipynb  05b_probe_evaluation.ipynb  06_failure_analysis copy.ipynb  06_failure_analysis.ipynb  06_failure_analysis_gemma.ipynb  07_indonesian_synthetic_generation.ipynb
research/: references.md
research/claude_learning_notes/: 01_aggregation_and_learning_strategy.md  02_codebase_overview.md  03_data_lineage_and_provenance.md  04_llama31_language_support.md  05_dimensionality_reduction_and_clustering.md  06_sae_selection_and_paper_failures.md  07_probe_hyperparameters.md  08_bfloat16_vs_float16.md
writing/: research_results.md  research_tracker.md
(+11 files in other folders)
